assets/preset1_hart.css
/* ... */
.menuBox {
  font-family: 'proxima_nova_rgregular';
  font-size: 15px;
  color: #0B4952;
  padding-bottom: 15pt;
  padding-left: 0.5%;
  position: fixed;
  top: 20px;
}

.menuItems {
  padding-bottom: 20pt;
}

.menuTexts {
  color: #0B4952;
}

/* Dashboard
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.background-lgeo {
  /* width: 90%; */
  display: inline-block;
  padding-left: 2%;
  /* padding-right: 10%; */
  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */
}

.dashboard-lgeo {
  /*width: 100%;*/
  display: inline-block;
  padding-left: 2%;
  /* padding-right: 10%; */
  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */
}

.dropdown-lgeo {
  width: 40%;
  display: inline-block;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
}

.map-lgeo {
  width: 100%; 
  display: inline-block;

}

.scale-button-lgeo {
  width: 100%;
  display: inline-block;
  padding-bottom: 5px;
  padding-top: 5px;

}

.reset-button-lgeo {
  width: 100%;
  display: inline-block;
  /* padding-bottom: 20px; */
  padding-top: 10px;

}


.pg2-table-lgeo {
  width: 80%;
  padding-top: 30px;
  padding-bottom: 30px;
}


/* .pg2-plot-lgeo {
  width: 80%;
  display: inline-block;
} */


.pg2-plot-lgeo {
  /* width: 90%;
  display: inline-block; */
  padding-top: 1%;
}

.pg3-plot-lgeo {
  /* width: 90%;
  display: inline-block; */
  padding-top: 1%;
}

/* .pg3-table-plot-box-lgeo {
  width: 100%;
  display: inline-block;
  padding-bottom: 1%;
} */


.export{
  margin-bottom: 5%;
}

.region-button-lgeo {
  display: inline-block;
  padding-right: 1%;
  padding-top: 1%;
}

.tables {
  padding-bottom: 1%;
  padding-top: 1%;
}

/* 
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* For devices larger than 400px */
@media (min-width: 400px) {
  .container {
    width: 85%;
    padding: 0; }
}

/* For devices larger than 550px */
@media (min-width: 550px) {
  .container {
    width: 80%; }
  .column,
  .columns {
    margin-left: 4%; }
  .column:first-child,
  .columns:first-child {
    margin-left: 0; }

  .one.column,
  .one.columns                    { width: 4.66666666667%; }
  .two.columns                    { width: 13.3333333333%; }
  .three.columns                  { width: 22%;            }
  .four.columns                   { width: 30.6666666667%; }
  .five.columns                   { width: 39.3333333333%; }
  .six.columns                    { width: 48%;            }
  .seven.columns                  { width: 56.6666666667%; }
  .eight.columns                  { width: 65.3333333333%; }
  .nine.columns                   { width: 74.0%;          }
  .ten.columns                    { width: 82.6666666667%; }
  .eleven.columns                 { width: 91.3333333333%; }
  .twelve.columns                 { width: 100%; margin-left: 0; }

  .one-third.column               { width: 30.6666666667%; }
  .two-thirds.column              { width: 65.3333333333%; }

  .one-half.column                { width: 48%; }

  /* Offsets */
  .offset-by-one.column,
  .offset-by-one.columns          { margin-left: 8.66666666667%; }
  .offset-by-two.column,
  .offset-by-two.columns          { margin-left: 17.3333333333%; }
  .offset-by-three.column,
  .offset-by-three.columns        { margin-left: 26%;            }
  .offset-by-four.column,
  .offset-by-four.columns         { margin-left: 34.6666666667%; }
  .offset-by-five.column,
  .offset-by-five.columns         { margin-left: 43.3333333333%; }
  .offset-by-six.column,
  .offset-by-six.columns          { margin-left: 52%;            }
  .offset-by-seven.column,
  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
  .offset-by-eight.column,
  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
  .offset-by-nine.column,
  .offset-by-nine.columns         { margin-left: 78.0%;          }
  .offset-by-ten.column,
  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
  .offset-by-eleven.column,
  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }

  .offset-by-one-third.column,
  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
  .offset-by-two-thirds.column,
  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }

  .offset-by-one-half.column,
  .offset-by-one-half.columns     { margin-left: 52%; }

}

/* Fonts
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@import url('https://fonts.cdnfonts.com/css/bahnschrift');

@font-face {
	font-family: 'proxima_nova_rgregular';
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'proxima_nova_rgbold';
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
	font-weight: normal;
	font-style: normal;
}
/* ... */

